bk_ida/gccida/g2/want_to_gcse_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1789:28: error: use of undeclared identifier 'machine_mode'
v4 = general_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1795:6: error: use of undeclared identifier 'test_insn_13'
v6 = test_insn_13; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1796:7: error: use of undeclared identifier 'test_insn_13'
if ( !test_insn_13 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1799:31: error: invalid suffix 'xmode' on integer constant
v11 = gen_rtx_REG( *(short *)0xmode, 106); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1804:1: error: use of undeclared identifier 'test_insn_13'
test_insn_13 = insn_raw; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1805:20: error: use of undeclared identifier 'test_insn_13'
ggc_add_rtx_root( &test_insn_13, 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1806:6: error: use of undeclared identifier 'test_insn_13'
v6 = test_insn_13; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/gcse.c:1809:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)v6[2]; 
               ^~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/want_to_gcse_p/src/obj/gcse.o] Error 1
